--- a/src/reset.css
+++ b/src/reset.css
@@ -131,3 +131,17 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+/* modal */
+.ReactModal__Overlay {
+  opacity: 0;
+  transition: opacity 300ms ease-in-out;
+}
+
+.ReactModal__Overlay--after-open {
+  opacity: 1;
+}
+
+.ReactModal__Overlay--before-close {
+  opacity: 0;
+}
